--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-BASE_URL = "http://php2_news.com/"
+BASE_URL = "http://asm.com/"
 
 # DATABASE
 DB_HOST = "localhost"
@@ -6,3 +6,4 @@ DB_PORT = "3306"
 DB_USERNAME = "root"
 DB_PASSWORD = ""
 DB_DATABASE = "php2_news"
+DB_CHARSET = "utf8mb4"
