--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,6 @@ DB_HOST = "localhost"
 DB_PORT = "3306"
 DB_USERNAME = "root"
 DB_PASSWORD = ""
-DB_DATABASE = "php2_news"
+DB_CHARSET  = "utf8mb4"
+DB_DRIVER   = "pdo_mysql"
+DB_DATABASE = "php2-news"
