--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,11 @@
 BASE_URL = "http://php2_news.com/"
 
+PATH_ABSOLUTE = "C:\\App\\laragon\\www\\PHP2_News\\"
+
 # DATABASE
 DB_HOST = "localhost"
 DB_PORT = "3306"
 DB_USERNAME = "root"
 DB_PASSWORD = ""
 DB_DATABASE = "php2_news"
+DB_CHARSET = "utf8"
