--- a/.env.example
+++ b/.env.example
@@ -1,7 +1,9 @@
 BASE_URL = "http://php2_newss.com/"
+BASE_URL = "http://php2_newss.com/"
 
 # DATABASE
 DB_HOST = "localhost"
+DB_PORT = "3307"
 DB_PORT = "3307"
 DB_USERNAME = "root"
 DB_PASSWORD = ""
